--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "ts:check": "tsc",
+    "test": "jest --watchAll",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
@@ -26,17 +26,26 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.5.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "eslint": "8",
+    "eslint-config-universe": "^12.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.1.3"
+    "ts-node": "^10.9.2",
+    "typescript": "5.3.3"
   },
   "private": true
 }
