--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,13 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
-        "./*"
+        "src/*"
       ]
-    }
+    },
+    "types": ["@testing-library/jest-native", "jest"]
   },
   "include": [
     "**/*.ts",
