--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-system-ui": "~2.9.4",
     "expo-updates": "~0.24.12",
     "expo-web-browser": "~12.8.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
@@ -41,12 +42,15 @@
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "autoprefixer": "^10.4.19",
     "eslint": "8",
     "eslint-config-universe": "^12.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "3.3.2",
     "ts-node": "^10.9.2",
     "typescript": "5.3.3"
   },
