--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "ts:check": "tsc",
+    "test:watch": "jest",
     "test": "jest --watchAll",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "@dev-plugins/react-navigation": "^0.0.6",
@@ -38,6 +40,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.12",
@@ -45,8 +49,10 @@
     "autoprefixer": "^10.4.19",
     "eslint": "8",
     "eslint-config-universe": "^12.0.1",
+    "husky": "^9.0.11",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
