feat: implement auth screens layout

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -53,6 +53,8 @@ target 'SkinFirst' do
     :flipper_configuration => flipper_config
   )
 
+  pod 'React-RCTText', :path => '../node_modules/react-native/Libraries/Text', :modular_headers => true
+
   post_install do |installer|
     react_native_post_install(
       installer,
