--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@dev-plugins/react-navigation": "^0.0.6",
     "@expo-google-fonts/league-spartan": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/datetimepicker": "8.0.0",
     "@react-navigation/native": "^6.0.2",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.17",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
@@ -35,9 +37,11 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-text-input-mask": "^3.2.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
@@ -48,9 +52,11 @@
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-text-mask": "^5.4.14",
     "autoprefixer": "^10.4.19",
     "eslint": "8",
     "eslint-config-universe": "^12.0.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "husky": "^9.0.11",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
