--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
     "@react-native-community/datetimepicker": "8.0.0",
     "@react-navigation/native": "^6.0.2",
     "date-fns": "^3.6.0",
-    "expo": "~50.0.17",
-    "expo-dev-client": "~3.3.11",
-    "expo-font": "~11.10.3",
-    "expo-image": "~1.10.6",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-splash-screen": "~0.26.5",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.4",
-    "expo-updates": "~0.24.12",
-    "expo-web-browser": "~12.8.2",
+    "expo": "51.0.1",
+    "expo-dev-client": "~4.0.12",
+    "expo-font": "~12.0.4",
+    "expo-image": "~1.12.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.11",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-updates": "~0.25.10",
+    "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "3.10.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-web": "~0.19.6"
   },
@@ -54,12 +54,13 @@
     "@types/react": "~18.2.45",
     "@types/react-text-mask": "^5.4.14",
     "autoprefixer": "^10.4.19",
-    "eslint": "8",
-    "eslint-config-universe": "^12.0.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~51.0.1",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
