--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "@dev-plugins/react-navigation": "^0.0.6",
     "@expo-google-fonts/league-spartan": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-community/datetimepicker": "8.0.0",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/native": "^6.0.2",
     "date-fns": "^3.6.0",
-    "expo": "51.0.1",
+    "expo": "~51.0.2",
     "expo-auth-session": "~5.5.2",
-    "expo-dev-client": "~4.0.12",
+    "expo-dev-client": "~4.0.13",
     "expo-font": "~12.0.4",
     "expo-image": "~1.12.9",
     "expo-linking": "~6.3.1",
@@ -34,7 +34,7 @@
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
-    "expo-updates": "~0.25.10",
+    "expo-updates": "~0.25.11",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -42,7 +42,7 @@
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-datetime-picker": "^17.1.0",
-    "react-native-reanimated": "3.10.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-text-input-mask": "^3.2.0",
