--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "test:watch": "jest --watchAll",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@clerk/clerk-expo": "^1.1.0",
-    "@clerk/clerk-react": "^5.0.4",
     "@dev-plugins/react-navigation": "^0.0.6",
     "@expo-google-fonts/league-spartan": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@hookform/resolvers": "^3.3.4",
     "@react-native-community/datetimepicker": "7.7.0",
     "@react-navigation/native": "^6.0.2",
     "date-fns": "^3.6.0",
@@ -39,14 +40,17 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.4",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-text-input-mask": "^3.2.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -66,6 +70,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~51.0.1",
     "lint-staged": "^15.2.2",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
