--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
     "react-native": "0.74.1",
@@ -60,6 +61,7 @@
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-text-mask": "^5.4.14",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
