--- a/package.json
+++ b/package.json
@@ -19,35 +19,35 @@
     "@clerk/clerk-expo": "^1.2.1",
     "@dev-plugins/react-navigation": "^0.0.6",
     "@expo-google-fonts/league-spartan": "^0.2.3",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/native": "^6.0.2",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.14",
+    "expo": "^51.0.32",
     "expo-auth-session": "~5.5.2",
-    "expo-dev-client": "~4.0.18",
-    "expo-font": "~12.0.7",
-    "expo-image": "~1.12.12",
+    "expo-dev-client": "~4.0.26",
+    "expo-font": "~12.0.10",
+    "expo-image": "~1.12.15",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
-    "expo-secure-store": "~13.0.1",
+    "expo-router": "~3.5.23",
+    "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
-    "expo-updates": "~0.25.17",
+    "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.4",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-text-input-mask": "^3.2.0",
     "react-native-web": "~0.19.6",
@@ -70,7 +70,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~51.0.4",
     "lint-staged": "^15.2.2",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.38",
