build: update README.md section

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/core": "^7.20.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@react-native-community/cli": "latest",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.5.0",
     "@types/jest": "^29.5.12",
