--- a/package.json
+++ b/package.json
@@ -16,34 +16,34 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.3.5",
+    "@clerk/clerk-expo": "^2.7.8",
     "@dev-plugins/react-navigation": "^0.1.0",
     "@expo-google-fonts/league-spartan": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
-    "@hookform/resolvers": "^3.9.1",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@react-navigation/native": "^7.0.0",
+    "@hookform/resolvers": "^4.1.1",
+    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.7",
-    "expo-auth-session": "~6.0.0",
-    "expo-dev-client": "~5.0.2",
-    "expo-font": "~13.0.1",
-    "expo-image": "~2.0.0",
-    "expo-linking": "~7.0.2",
-    "expo-router": "~4.0.6",
-    "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.11",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
-    "expo-updates": "~0.26.7",
-    "expo-web-browser": "~14.0.1",
+    "expo": "^52.0.37",
+    "expo-auth-session": "~6.0.3",
+    "expo-dev-client": "~5.0.12",
+    "expo-font": "~13.0.4",
+    "expo-image": "~2.0.6",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
+    "expo-splash-screen": "~0.29.22",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.8",
+    "expo-updates": "~0.27.1",
+    "expo-web-browser": "~14.0.2",
     "nativewind": "^4.1.23",
     "postcss": "^8.4.49",
     "react": "18.3.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "18.3.1",
-    "react-hook-form": "^7.51.4",
-    "react-native": "0.76.2",
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal-datetime-picker": "^18.0.0",
@@ -53,7 +53,7 @@
     "react-native-text-input-mask": "^3.2.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.4.15",
-    "zod": "^3.23.8"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -73,7 +73,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "husky": "^9.0.11",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.5",
     "lint-staged": "^15.2.10",
     "patch-package": "^8.0.0",
     "prettier": "^3.3.3",
@@ -81,5 +81,6 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
