--- a/package.json
+++ b/package.json
@@ -16,69 +16,69 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.7.8",
-    "@dev-plugins/react-navigation": "^0.1.0",
+    "@clerk/clerk-expo": "^2.10.1",
+    "@dev-plugins/react-navigation": "^0.2.0",
     "@expo-google-fonts/league-spartan": "^0.2.3",
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^4.1.1",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.37",
-    "expo-auth-session": "~6.0.3",
-    "expo-dev-client": "~5.0.12",
-    "expo-font": "~13.0.4",
-    "expo-image": "~2.0.6",
-    "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.17",
-    "expo-secure-store": "~14.0.1",
-    "expo-splash-screen": "~0.29.22",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.8",
-    "expo-updates": "~0.27.1",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.0-preview.12",
+    "expo-auth-session": "~6.1.4",
+    "expo-dev-client": "~5.1.4",
+    "expo-font": "~13.2.2",
+    "expo-image": "~2.1.5",
+    "expo-linking": "~7.1.3",
+    "expo-router": "~5.0.2-preview.6",
+    "expo-secure-store": "~14.2.2",
+    "expo-splash-screen": "~0.30.6",
+    "expo-status-bar": "~2.2.2",
+    "expo-system-ui": "~5.0.5",
+    "expo-updates": "~0.28.7",
+    "expo-web-browser": "~14.1.5",
     "nativewind": "^4.1.23",
     "postcss": "^8.4.49",
-    "react": "18.3.1",
-    "react-datepicker": "^8.1.0",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native": "0.79.1",
+    "react-native-advanced-input-mask": "^1.3.6",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-text-input-mask": "^3.2.0",
-    "react-native-web": "~0.19.6",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.15",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@react-native-community/cli": "latest",
-    "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.5.0",
+    "@testing-library/react-native": "^13.2.0",
     "@types/jest": "^29.5.14",
-    "@types/react": "~18.3.12",
-    "@types/react-text-mask": "^5.4.14",
+    "@types/react": "~19.0.10",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint": "^9.25.1",
+    "eslint-config-expo": "~9.1.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.0.11",
-    "jest": "^29.7.0",
-    "jest-expo": "~52.0.5",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.0",
     "lint-staged": "^15.2.10",
     "patch-package": "^8.0.0",
-    "prettier": "^3.3.3",
-    "react-test-renderer": "18.3.1",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
+  },
+  "overrides": {
+    "react": "19.0.0"
   },
   "private": true,
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
