--- a/package.json
+++ b/package.json
@@ -24,26 +24,26 @@
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/native": "^7.0.14",
     "date-fns": "^4.1.0",
-    "expo": "^53.0.0-preview.12",
-    "expo-auth-session": "~6.1.4",
-    "expo-dev-client": "~5.1.4",
-    "expo-font": "~13.2.2",
-    "expo-image": "~2.1.5",
-    "expo-linking": "~7.1.3",
-    "expo-router": "~5.0.2-preview.6",
-    "expo-secure-store": "~14.2.2",
-    "expo-splash-screen": "~0.30.6",
-    "expo-status-bar": "~2.2.2",
-    "expo-system-ui": "~5.0.5",
-    "expo-updates": "~0.28.7",
-    "expo-web-browser": "~14.1.5",
+    "expo": "^53.0.5",
+    "expo-auth-session": "~6.1.5",
+    "expo-dev-client": "~5.1.7",
+    "expo-font": "~13.3.0",
+    "expo-image": "~2.1.6",
+    "expo-linking": "~7.1.4",
+    "expo-router": "~5.0.4",
+    "expo-secure-store": "~14.2.3",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-updates": "~0.28.12",
+    "expo-web-browser": "~14.1.6",
     "nativewind": "^4.1.23",
     "postcss": "^8.4.49",
     "react": "19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.79.1",
+    "react-native": "0.79.2",
     "react-native-advanced-input-mask": "^1.3.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
@@ -65,12 +65,12 @@
     "@types/react": "~19.0.10",
     "autoprefixer": "^10.4.19",
     "eslint": "^9.25.1",
-    "eslint-config-expo": "~9.1.1",
+    "eslint-config-expo": "~9.2.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "husky": "^9.0.11",
     "jest": "~29.7.0",
-    "jest-expo": "~53.0.0",
+    "jest-expo": "~53.0.3",
     "lint-staged": "^15.2.10",
     "patch-package": "^8.0.0",
     "prettier": "^3.5.3",
